HLT-3779: fixed overflow issue on xs

--- a/src/main/webapp/bundles/health_v4/less/insurance_prefs/benefitsXSOverlay.less
+++ b/src/main/webapp/bundles/health_v4/less/insurance_prefs/benefitsXSOverlay.less
@@ -15,9 +15,13 @@ body.health {
 		}
 
 		@media (@xs-only) {
+			.benefitsContainer > .content {
+				overflow-x: hidden;
+			}
+
 			.benefitsOverflow {
 				width: 200%;
-				overflow: hidden;
+				overflow-x: hidden;
 				position: relative;
 			}
 
